--- a/nov02/Nov-02Class.tex
+++ b/nov02/Nov-02Class.tex
@@ -89,14 +89,10 @@ To perform that integral, we need to introduce an approximation. The one we will
 \]
 where $f(E)$ is normalized such that $\int_g dE\: f(E) = 1$. We substitute and/or use this in the regular TE and integrate over energy. Here's how that works term by term.
 %
-%\begin{align*}
-%\bigl[\vOmega \cdot \nabla + \Sigma_t\bigr] \psi(\vec{r}, E, \vOmega) &= \int_{4 \pi} d\vOmega' \int_0^{\infty} dE' \: \Sigma_s(E', \vOmega' \rightarrow E, \vOmega) \psi(\vec{r}, E', \vOmega')\\
-% &+ \frac{\chi(E)}{4 \pi}\int_0^{\infty} dE' \: \nu(E') \Sigma_f(E') \int_{4 \pi} d\vOmega' \:\psi(\vec{r}, E', \vOmega')
-%\end{align*}
 \begin{itemize}
 \item Streaming:
 \[
-\int_{E_g}^{E_{g-1}} dE\: \vOmega \cdot \nabla \psi(\vec{r}, \vOmega, E) = \vOmega \cdot \nabla \psi_g(\vec{r}, \vOmega)
+\int_{E_g}^{E_{g-1}} dE\: \vOmega \cdot \nabla \psi(\vec{r}, \vOmega, E) = \int_{E_g}^{E_{g-1}} dE\: \vOmega \cdot \nabla f(E)\psi_g(\vec{r}, \vOmega) = \vOmega \cdot \nabla \psi_g(\vec{r}, \vOmega)
 \]
 
 \item External (distributed fixed) source:
@@ -106,12 +102,12 @@ where $f(E)$ is normalized such that $\int_g dE\: f(E) = 1$. We substitute and/o
 \begin{align*}
 \int_{E_g}^{E_{g-1}} dE\: &\frac{\chi(E)}{4 \pi}\int_0^{\infty} dE' \: \nu(E') \Sigma_f(E') \int_{4 \pi} d\vOmega' \:\psi(\vec{r}, E', \vOmega') \\
 &\chi_g \equiv \int_{E_g}^{E_{g-1}} dE\: \chi(E) \\
-& \int_{4 \pi} d\vOmega' \:\psi(\vec{r}, E', \vOmega') = \phi(\vec{r}, E')\\
+& \int_{4 \pi} d\vOmega' \:\psi_g(\vec{r}, \vOmega') = \phi_g(\vec{r})\\
 & \int_0^{\infty} dE' \: \nu(E') \Sigma_f(E') = \sum_{g'=1}^G \int_{E_g'}^{E_{g'-1}} dE'\: \nu(E') \Sigma_f(E')
 \end{align*}
 These second two items combine to form the fission source from group $g'$. We also need to define
 \[
-\nu\Sigma_{fg'} = \dfrac{\int_{E_g'}^{E_{g'-1}} dE'\: \nu(E') \Sigma_f(E')\phi(\vec{r}, E')}{\phi_{g'}(\vec{r})}
+\nu\Sigma_{fg'} = \int_{E_g'}^{E_{g'-1}} dE'\: \nu(E') \Sigma_f(E') f(E')
 \]
 and therefore the fission source in group $g$ is
 \[
@@ -119,7 +115,116 @@ q_{fg} = \frac{\chi_g}{4 \pi}\sum_{g'=1}^G \nu\Sigma_{fg'} \phi_{g'}(\vec{r})
 \]
 
 \item Scattering term:
+\[
+q_{s,gg'}(\vOmega) \equiv \int_{E_g}^{E_{g-1}} dE \int_{E_g'}^{E_{g'-1}} dE' \int_{4 \pi} d\vOmega' \: \Sigma_s(E'\rightarrow E, \vOmega' \cdot \vOmega) \psi(\vec{r}, E', \vOmega')
+\]
+If we generically define the scattering cross section this we, we can get this general scattering expression
+\begin{align*}
+\Sigma_{s,gg'}(\vOmega' \cdot \vOmega) & \equiv \int_{E_g}^{E_{g-1}} dE \int_{E_g'}^{E_{g'-1}} dE' \: \Sigma_s(E'\rightarrow E, \vOmega' \cdot \vOmega) f(E')\\
+q_{s,gg'}(\vOmega) &= \sum_{g'=1}^G \int_{4 \pi} d\vOmega' \Sigma_{s,gg'}(\vOmega' \cdot \vOmega) \psi_g(\vec{r}, \vOmega')
+\end{align*}
+
+\item Total interaction:
+\begin{align*}
+\Sigma_{tg}(\vec{r}) &= \int_{E_g}^{E_{g-1}} dE\: \Sigma_t(\vec{r}, E)f(E)\\
+\text{term }&= \Sigma_{tg} \psi_g(\vec{r}, \vOmega)
+\end{align*}
+
 \end{itemize}
+%
+We can combine all of this to get a conventional, general expression for the \textbf{multigroup TE}.
+\begin{align*}
+[\vOmega \cdot \nabla + \Sigma_{tg}(\vec{r})]\psi_g(\vec{r}, \vOmega) =&  \sum_{g'=1}^G \int_{4 \pi} d\vOmega'\: \Sigma_{s,gg'}(\vecr, \vOmega' \cdot \vOmega) \psi_g(\vec{r}, \vOmega')\\
+&+\frac{\chi_g}{4 \pi}\sum_{g'=1}^G \nu\Sigma_{fg'}(\vec{r}) \phi_{g'}(\vec{r}) + q_g(\vec{r}, \vOmega)
+\end{align*}
+If we want, we can integrate this equation over angle to get a balance equation and from there derive the multigroup diffusion equation.
+
+---------------------------------\\
+\textbf{Group Constants}\\
+To solve this equation, we need all of the collapsed cross section values to come from somewhere (for this to be accurate, we need the detailed energy dependence of the cross sections and the spectral weighting function, $f(E)$, to be known). 
+
+For smoothly varying parts of the cross section, it is reasonable easy to make weighting function assumptions. However, in resonance regions even very fine group structures are insufficient and we get self-shielding effects that will be missed. There are a variety of methods to attempt to capture this behavior, but we will not go into them here.
+
+In a general sense, we often 
+\begin{enumerate}
+\item start with ENDF data (1000s of energy groups), and then do an infinite medium or 1-D transport calculation and use the results to collapse the data to 100s of energy groups.
+
+\item Following this we often do another transport calculation at the level of a unit cell or assembly and then collapse in energy and homogenize in space, getting us few to 10s of groups.\\
+We will take, e.g.\ an assembly from the middle of the core and put reflecting boundary conditions on all sides and solve for either $\psi_g(\vec{r}, \vOmega)$ or $\phi_{l,g}^m(\vec{r})$ (see below) to use in the collapsing.
+
+\item Finally, we do a core level calculation with diffusion theory. 
+\end{enumerate}
+
+Collapsing in energy with fine groups $j$ into coarse group $h$:
+\[
+\Sigma_{j,h} \equiv \frac{\sum_{g \in h} \Sigma_{j,g} \phi_g(\vec{r})}{\sum_{g\in h} \phi_g(\vec{r})}
+\]
+and you would replace $\phi_g$ with $\psi_g$ or $\phi_{l,g}^m$ if doing scattering. 
+
+Homogenizing in space (flux-weighting):
+\[
+\Sigma_j^{homog} \equiv \frac{\int_V dV \: \Sigma_j(\vec{r}) \phi_g(\vec{r})}{\int_V dV \: 
+\phi_g(\vec{r})}
+\]
+where $V$ is a region made up of different nuclides at each point. 
+
+
+
+
+----------------------------------------------\\
+\textbf{Alternative Derivation} 
+
+Instead of requiring the separation of energy , we can use the \textit{Legendre expansion technique} as we did before. This form is what we solve in many transport codes.\\
+The main motivation for doing this is to have better definitions of the multigroup cross sections. Recall the Legendre addition theorem and flux moment definition:
+\begin{align*}
+P_l(\vOmega' \cdot \vOmega) &= \frac{1}{2l+1}\sum_{m=-l}^l Y^*_{lm}(\vOmega)Y_{lm}(\vOmega')\\
+\phi_{l}^{m}(\vec{r},E') &= \int_{4 \pi} d\vOmega'\: Y_{lm}(\vOmega') \psi(\vec{r}, \vOmega', E') \\
+\psi(\vec{r}, \vOmega', E') &= \sum_{l=0}^{\infty} \sum_{m=-l}^l Y^*_{lm}(\vOmega)\phi_{l}^{m}(\vec{r},E')
+\end{align*}
+
+Let's update several terms
+\begin{itemize}
+\item Scattering:
+\[
+\Sigma_s(E'\rightarrow E, \vOmega' \cdot \vOmega) = \sum_{l=0}^{\infty} (2l+1) \Sigma_{s,l}(E'\rightarrow E) P_l(\vOmega' \cdot \vOmega)
+\]
+Now, we can rewrite the scattering source term
+\[
+q_{s,gg'} = \sum_{l=0}^{\infty} \sum_{m=-l}^l Y^*_{lm}(\vOmega)\int_{E_g}^{E_{g-1}} dE \int_{E_g'}^{E_{g'-1}} dE' \: \Sigma_{s,l}(E'\rightarrow E)\phi_{l}^{m}(\vec{r},E')
+\]
+We can use the angular flux moments to get a group scattering cross section moment:
+\[
+\Sigma_{sl,gg'} \approx \dfrac{\int_{E_g}^{E_{g-1}} dE \int_{E_g'}^{E_{g'-1}} dE' \: \Sigma_{s,l}(E'\rightarrow E)\phi_{l}^{m}(\vec{r},E')}{\phi_{l,g'}^{m}(\vec{r})}
+\]
+Finally
+\begin{align*}
+q_{s,gg'} &= \sum_{l=0}^{\infty} \sum_{m=-l}^l Y^*_{lm}(\vOmega)\Sigma_{sl,gg'}\phi_{l,g'}^{m}(\vec{r})\\
+q_{s,g} &= \sum_{l=0}^{\infty} \sum_{m=-l}^l Y^*_{lm}(\vOmega)\sum_{g'=1}^G \Sigma_{sl,gg'}\phi_{l,g'}^{m}(\vec{r})
+\end{align*}
+
+\item Total interaction:
+\[
+\Sigma_{tg}(\vec{r}) = \dfrac{\int_{E_g}^{E_{g-1}} dE\: \Sigma_t(\vec{r}, E) \psi(\vec{r}, \vOmega, E)}{\psi_g(\vec{r}, \vOmega)}
+\]
+\begin{align*}
+\int_{E_g}^{E_{g-1}} dE\: \Sigma_t(\vec{r}, E)\sum_{l=0}^{\infty} \sum_{m=-l}^l Y^*_{lm}(\vOmega)\phi_{l}^{m}(\vec{r},E) &= \sum_{l=0}^{\infty} \sum_{m=-l}^l Y^*_{lm}(\vOmega)\int_{E_g}^{E_{g-1}} dE\: \Sigma_{t}(\vec{r},E)\phi_{l}^{m}(\vec{r},E) \\
+\text{where }&\Sigma_{tl,g}(\vec{r}) = \dfrac{\int_{E_g}^{E_{g-1}} dE\: \Sigma_t(\vec{r}, E) \phi_l^m(\vec{r}, \vOmega, E)}{\phi_{l,g}^m(\vec{r}, \vOmega)}\\
+&= \sum_{l=0}^{\infty} \sum_{m=-l}^l Y^*_{lm}(\vOmega)\Sigma_{tl,g}(\vec{r})\phi_{l,g}^{m}(\vec{r})
+\end{align*}
+
+\item Fission
+\[
+\nu\Sigma_{fg'} = \dfrac{\int_{E_g'}^{E_{g'-1}} dE'\: \nu(E') \Sigma_f(E')\phi(\vec{r}, E')}{\phi_{g'}(\vec{r})}
+\]
+
+\end{itemize}
+
+
+We can plug these into the general form to get this
+\begin{align*}
+[\vOmega \cdot \nabla &+ \underbrace{\Sigma_{tg}(\vec{r})}_{\text{anisotropic}}]\psi_g(\vec{r}, \vOmega) =  \frac{\chi_g}{4 \pi}\sum_{g'=1}^G \nu\Sigma_{fg'}(\vec{r}) \phi_{g'}(\vec{r}) + q_g(\vec{r}, \vOmega)\\
+&= \sum_{l=0}^{\infty} \sum_{m=-l}^l Y^*_{lm}(\vOmega)\sum_{g'=1}^G \bigl[\Sigma_{sl,gg'} + \bigl(\underbrace{\Sigma_{tg}(\vec{r})}_{\text{balances rhs}} - \Sigma_{tl,g}(\vec{r}) \bigr) \delta_{gg'}  \bigr]\phi_{l,g'}^{m}(\vec{r})
+\end{align*}
 
 
 
